--- a/index.html
+++ b/index.html
@@ -152,11 +152,13 @@
         function appendItems() {
             const slider = document.getElementById('slider');
             const predefinedItems = [
-                { name: 'Item 1', rarityClass: '' },
-                { name: 'Item 2', rarityClass: '' },
-                { name: 'Item 3', rarityClass: '' },
-                { name: 'Item 4', rarityClass: 'rare' },
-                { name: 'Item 5', rarityClass: 'ultra-rare' }
+                { name: 'base 4', rarityClass: '' },
+                { name: 'base 2', rarityClass: '' },
+                { name: 'base 5', rarityClass: 'rare' },
+                { name: 'base 3', rarityClass: '' },
+                { name: 'base 1', rarityClass: 'rare' },
+                { name: 'creations 5', rarityClass: 'ultra-rare' },
+                { name: 'wood 1', rarityClass: 'rare' }
             ];
 
             // Shuffle the predefined items
